--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,11 +20,11 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Install Dependencies
-      run: npm i
+    # - name: Install Dependencies
+    #   run: npm i
 
-    - name: Run Tests      
-      run: npm test   
+    # - name: Run Tests      
+    #   run: npm test   
 
     - name: Get Latest Tag
       id: latesttag
