--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "API for Todos in my little example app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "jest"
+    "start": "nodemon server.js"
   },
   "author": "elgris <iddqd07@yandex.ru>",
   "license": "MIT",
@@ -21,7 +20,6 @@
     "zipkin-transport-http": "^0.11.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
     "nodemon": "^1.11.0"
   }
 }
